# hail-parser

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  rust.yml
app/: Cargo.toml  README.md
app/src/: main.rs
parser/: Cargo.toml
parser/src/: README.md  lib.rs
parser/src/load/: README.md  component.rs  compression.rs  helpers.rs  matrix.rs  metadata.rs  mod.rs  table.rs
parser/src/parse/: README.md  mod.rs
parser/src/parse/data/: e_type.rs  encoders.rs  error.rs  helpers.rs  mod.rs  parse.rs  parse_rows.rs
parser/src/parse/schema/: conversion_impls.rs  error.rs  helpers.rs  mod.rs  parse.rs
parser/src/parse/schema/deserialisation_impls/: helpers.rs  matrix.rs  mod.rs  rvd_type.rs  rvd_type_2.rs  table.rs
parser/src/types/: encoding.rs  hail.rs  mod.rs
parser/src/types/metadata/: component.rs  component_1.rs  component_2.rs  matrix.rs  mod.rs  shared.rs  table.rs
parser/tests/: README.md  component.rs  matrix_tables.rs  table.rs  tests.rs
resources/: README.md
resources/custom_references.mt/index/part-0-1-0-0-250f8968-da7c-ee73-2d85-596a00e46998.idx/: index_
resources/custom_references.mt/index/part-1-1-1-0-f6d96b12-53e5-aae7-4fc1-297b8ac59d24.idx/: index_
resources/required_globals.mt/globals/rows/parts/: part-0_
serde_hail/: Cargo.toml  README.md
serde_hail/src/: error.rs  lib.rs  model_generation.rs  types.rs
serde_hail/src/de/: deserializer.rs  hail_ndarray.rs  look_ahead.rs  mod.rs
serde_hail/src/load/: helpers.rs  mod.rs
serde_hail/tests/: component.rs  matrix_tables.rs  table.rs
(+7 files in other folders)
