[package]
name = "parser"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lzzzz = "0.8"
flate2 = "1.0"
serde =  { version = "1.0", features = [ "derive" ] }
once_cell = "1.5"
regex = "1.4"
nom = "6.1"
anyhow = "1.0"
serde_json = "1.0"
nom-leb128 = "0.1"
ndarray =  "0.15"