[package]
name = "serde_hail"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { path = "../parser" }

serde =  {version="1.0", features=["derive"]}
nom = "6.1"
anyhow = "1.0"
ndarray =  "0.14"
quote = "1.0"
Inflector = "0.11"